crates/toml_edit/tests/snapshots/invalid/integer/incomplete-bin.stderr
TOML parse error at line 1, column 18
  |
1 | incomplete-bin = 0b
  |                  ^^
integer number overflowed
